プロジェクトの再生成

--- a/system/core/templates/core/login.html
+++ b/system/core/templates/core/login.html
@@ -29,8 +29,9 @@
 
         <!-- ボタンで処理を分岐 -->
         <div style="margin-top: 10px;">
-            <button type="submit" name="action" value="login">ログイン</button>
-            <button type="submit" name="action" value="register">アカウント作成</button>
+            <button type="submit" name="login">ログイン</button>
+            <button type="submit" name="register">アカウント作成</button>
+
         </div>
     </form>
 </div>
