--- a/system/core/templates/core/home.html
+++ b/system/core/templates/core/home.html
@@ -26,9 +26,10 @@
         <form method="GET" action="{% url 'core:login' %}" style="display: inline;">
             <button type="submit" class="btn">ログイン</button>
         </form>
-        <form method="GET" action="{% url 'core:register_student' %}" style="display: inline; margin-left: 10px;">
+        <!-- <form method="GET" action="{% url 'core:register_student' %}" style="display: inline; margin-left: 10px;">
             <button type="submit" class="btn">アカウント作成</button>
         </form>
+         -->
     </div>
 </div>
 {% endblock %}
