プロジェクトの再生成

--- a/system/core/templates/core/home.html
+++ b/system/core/templates/core/home.html
@@ -12,7 +12,7 @@
     <nav>
         <ul style="list-style: none; display: flex; gap: 15px; margin: 0; padding: 0;">
             <li><a href="{% url 'core:login' %}" style="text-decoration: none; color: white; font-weight: bold;">ログイン</a></li>
-            <li><a href="{% url 'core:register_student' %}" style="text-decoration: none; color: white; font-weight: bold;">アカウント作成</a></li>
+            <!-- <li><a href="{% url 'core:register_student' %}" style="text-decoration: none; color: white; font-weight: bold;">アカウント作成</a></li> -->
         </ul>
     </nav>
 </header>
