プロジェクトの再生成

--- a/system/core/templates/core/attendance_plan.html
+++ b/system/core/templates/core/attendance_plan.html
@@ -6,9 +6,9 @@
     <!-- ナビゲーションバー -->
     <nav>
         <ul style="list-style: none; display: flex; gap: 15px; margin: 0; padding: 0;">
-            <li><a href="{% url 'student_home' %}" style="text-decoration: none; color: white; font-weight: bold;">ホームに戻る</a></li>
-            <li><a href="{% url 'manage_grades' %}" style="text-decoration: none; color: white; font-weight: bold;">成績管理</a></li>
-            <li><a href="{% url 'logout' %}" style="text-decoration: none; color: white; font-weight: bold;">ログアウト</a></li>
+            <li><a href="{% url 'core:student_home' %}" style="text-decoration: none; color: white; font-weight: bold;">ホームに戻る</a></li>
+            <li><a href="{% url 'core:manage_grades' %}" style="text-decoration: none; color: white; font-weight: bold;">成績管理</a></li>
+            <li><a href="{% url 'core:logout' %}" style="text-decoration: none; color: white; font-weight: bold;">ログアウト</a></li>
         </ul>
     </nav>
 </header>
